# rs-fan

./: .gitignore  Cargo.toml  INPUT_SPECS.md  README.md  TODO.md  benchmark.sh  benchmark_batch.sh  build_optimized.sh  pyproject.toml  test_encoder_threads.sh
docs/: libsndfile.md
examples/: demo.py
python/resamplefan/: __init__.py  cli.py
scripts/: compare_ffmpeg.sh  shootout.sh
src/: lib.rs  main.rs  python.rs
