[package]
name = "rs-fan"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_fan"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "resamplefan"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
# bytemuck = { version = "1.23.2", features = ["extern_crate_alloc"] }  # Not needed anymore
clap = { version = "4.5.48", features = [
    "derive",
    "help",
    "usage",
    "error-context",
] }
env_logger = "0.11.3"
# flamegraph = "0.6.9"  # Remove unless profiling
log = "0.4.22"
# ndarray = "0.16.1"    # Not used
num_cpus = "1.17.0"
rayon = "1.11.0"
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sndfile = { version = "0.1.1", default-features = false } # Remove ndarray feature
soxr = "0.6.0"

[profile.release]
opt-level = 3
lto = "fat"       # Link-time optimization for maximum performance
codegen-units = 1 # Single codegen unit for better optimization
panic = "abort"   # Smaller binary, slightly faster
strip = true      # Strip debug symbols from binary

[profile.release.package."*"]
opt-level = 3 # Optimize all dependencies at maximum level

# Fast compilation during development
[profile.dev]
opt-level = 1      # Some optimization for reasonable dev performance
debug = 1          # Reduced debug info for faster compilation
incremental = true # Faster incremental builds

# Profile for performance testing - similar to release but with debug info
[profile.bench]
inherits = "release"
debug = true         # Keep debug info for profiling
strip = false
