[package]
name = "rs-fan"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_fan"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "resamplefan"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = [
    "derive",
    "help",
    "usage",
    "error-context",
] }
env_logger = "0.11.3"
log = "0.4.22"
num_cpus = "1.17.0"
rayon = "1.11.0"
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
## further optim would be use sndfiles native mp3 encoding
sndfile = { version = "0.1.1", default-features = false }
soxr = "0.6.0"
mp3lame-encoder = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = 1
incremental = true

[profile.bench]
inherits = "release"
debug = true         # Keep debug info for profiling
strip = false
