[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "resamplefan"
version = "0.2.0"
description = "Fast audio resampling using SoXR"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
[project.scripts]
rs-fan = "resamplefan.cli:main"

[tool.maturin]
python-source = "python"
module-name = "resamplefan"

[dependency-groups]
dev = ["pyinstrument>=5.1.1"]
# debug = 2
